[gd_scene load_steps=16 format=3 uid="uid://cuj8wikq6vcpt"]

[ext_resource type="Theme" uid="uid://dhlpfrladpxn2" path="res://Theme/Theme_Medium_Font.tres" id="1"]
[ext_resource type="Script" uid="uid://crxereog0u6n8" path="res://Singletons/PauseScreen.gd" id="2"]
[ext_resource type="StyleBox" uid="uid://dm8hlq85fctfk" path="res://Summary Panel Cont.tres" id="3"]
[ext_resource type="Theme" uid="uid://fcmkyi7fg3b5" path="res://Theme/Theme_Very_Large_Font.tres" id="4"]
[ext_resource type="PackedScene" uid="uid://ds36c3qoqmf3y" path="res://Controller Glyph.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://b5w1afldacdb1" path="res://CustomButton.tscn" id="6"]
[ext_resource type="Theme" uid="uid://bxx07kmhw0oiv" path="res://Theme/Theme_Small_Medium_Font.tres" id="7"]
[ext_resource type="StyleBox" uid="uid://bj1fytem4uuvy" path="res://Theme/Settings Panel.tres" id="8"]
[ext_resource type="Theme" uid="uid://f0mobaom23an" path="res://Theme/Theme_Large_Font.tres" id="9"]
[ext_resource type="PackedScene" uid="uid://dl3ia7dmya7fp" path="res://Settings.tscn" id="10"]
[ext_resource type="Script" uid="uid://c36s4gjs5sv4r" path="res://addons/controller_icons/objects/ControllerIconTexture.gd" id="11"]
[ext_resource type="PackedScene" uid="uid://1txuh2meyqfj" path="res://Build Label.tscn" id="12"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jtgmu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.443137, 0.443137, 0.45098, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Texture2D" id="Texture2D_k2vsg"]
script = ExtResource("11")
path = "back"
custom_label_settings = null
metadata/_custom_type_script = "uid://c36s4gjs5sv4r"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kble2"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Pause Screen" type="ColorRect"]
process_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
color = Color(0, 0, 0, 0.392157)
script = ExtResource("2")
metadata/_edit_lock_ = true

[node name="Main Pause Stuff" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -458.0
offset_right = 223.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Main Pause Stuff"]
layout_mode = 2
size_flags_vertical = 8

[node name="PanelContainer" type="PanelContainer" parent="Main Pause Stuff/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4")
text = "PAUSED"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5")]
layout_mode = 2
enabled = false

[node name="Resume" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("glyph_comp") instance=ExtResource("6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_jtgmu")
text = "RESUME"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="Go To Upgrades HBox" type="HBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Go To Upgrades HBox" instance=ExtResource("5")]
layout_mode = 2
enabled = false

[node name="Go To Upgrades" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Go To Upgrades HBox" node_paths=PackedStringArray("glyph_comp") instance=ExtResource("6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "END SESSION"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="HBoxContainer3" type="HBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3" instance=ExtResource("5")]
layout_mode = 2
enabled = false

[node name="Settings" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3" node_paths=PackedStringArray("glyph_comp") instance=ExtResource("6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "SETTING"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="HBoxContainer4" type="HBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4" instance=ExtResource("5")]
layout_mode = 2
enabled = false

[node name="Wishlist" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4" node_paths=PackedStringArray("glyph_comp") instance=ExtResource("6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "WISHLIST"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="HBoxContainer5" type="HBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5" instance=ExtResource("5")]
layout_mode = 2
enabled = false

[node name="Main Menu" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5" node_paths=PackedStringArray("glyph_comp") instance=ExtResource("6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "MAIN MENU"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="HBoxContainer6" type="HBoxContainer" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Controller Glyph" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer6" instance=ExtResource("5")]
layout_mode = 2
enabled = false

[node name="Quit" parent="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer6" node_paths=PackedStringArray("glyph_comp") instance=ExtResource("6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
text = "QUIT"
enable_on_focus = true
glyph_comp = NodePath("../Controller Glyph")

[node name="Setting Pannel" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.0
offset_top = -494.0
offset_right = 244.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="PanelContainer" parent="Setting Pannel"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("7")
theme_override_styles/panel = ExtResource("8")

[node name="MarginContainer" type="MarginContainer" parent="Setting Pannel/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="MarginContainer2" type="MarginContainer" parent="Setting Pannel/Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Setting Pannel/Panel/MarginContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Setting Pannel/Panel/MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("9")
text = "SETTINGS"
horizontal_alignment = 1

[node name="Settings Vbox" parent="Setting Pannel/Panel/MarginContainer/MarginContainer2/VBoxContainer" instance=ExtResource("10")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Setting Pannel/Panel/MarginContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Controller Glyph" parent="Setting Pannel/Panel/MarginContainer/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("5")]
layout_mode = 2
texture = SubResource("Texture2D_k2vsg")

[node name="Hide Settings" parent="Setting Pannel/Panel/MarginContainer/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource("6")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_kble2")
text = "BACK"
icon_alignment = 1
expand_icon = true

[node name="Build" parent="." instance=ExtResource("12")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
offset_left = -180.0
offset_top = -36.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[connection signal="pressed" from="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/Go To Upgrades HBox/Go To Upgrades" to="." method="_on_go_to_upgrades_pressed"]
[connection signal="pressed" from="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4/Wishlist" to="." method="_on_wishlist_pressed"]
[connection signal="pressed" from="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Main Pause Stuff/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer6/Quit" to="." method="_on_quit_pressed"]
[connection signal="button_up" from="Setting Pannel/Panel/MarginContainer/MarginContainer2/VBoxContainer/HBoxContainer/Hide Settings" to="." method="_on_hide_settings_button_up"]
